--- a/donator/colorgrid/index.html
+++ b/donator/colorgrid/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./satyle.css">
+    <title>Donator - Dark-Lynn</title>
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Yesteryear&display=swap" rel="stylesheet">
@@ -12,30 +12,31 @@
 </head>
 <body onload="load()" >
     <nav class="navigationbar">
-        <div class="leftnav"><a href="../index.html"><i class="fas fa-calendar-week"></i></a></div>
-        <div class="centernav"><a href="../index.html"><span class="logo">Gradiently</span></a> </div>
+        <div class="leftnav">
+            <a href="../">
+                <i class="fas fa-calendar-week">
+                </i>
+            </a>
+        </div>
+        <div class="centernav">
+            <a href="../">
+                <span class="logo">Donator</span>
+            </a> 
+        </div>
         <div class="rightnav">
-            
         </div>
     </nav>
     <main class="grid-container" id="main">
-
         <div class="css" id="css">
             <div class="cancelbtn">
                 <button id="cancel" onclick="cancel()"><i class="far fa-window-close"></i></button>
             </div>
-            <div class="csscodetext" id="csscodetext">
-
-            </div>
+            <div class="csscodetext" id="csscodetext"></div>
             <div class="copycss">
                 <button id="copycssbtn" class="copycssbtn" onclick="copy()">Copy CSS</button>
             </div>
         </div>
-
     </main>
-
-
-    
-    <script src="./main1.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
