--- a/Game/PcBuildingSim/current/index.html
+++ b/Game/PcBuildingSim/current/index.html
@@ -113,7 +113,7 @@
                         <tr>
                             <td>CPU (Processor)</td>
                             <td>
-                                <input name="input3DMarkCpu" list="listCpus3DMark" onchange="
+                                <input name="input3DMarkCpu" class="Choise3DMarkCpu" list="listCpus3DMark" onchange="
                                     updateRamSpeedOptions3DMark();
                                     updateRamChannelOptions3DMark();
                                 ">
@@ -79936,6 +79936,6 @@
     </script>
 </body>
 
-</html>main
+</html>
 
 </html>
