--- a/Game/index.html
+++ b/Game/index.html
@@ -24,11 +24,17 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class='file'>
-                    <td><a href='./Digby.txt' class='name'>Digby.txt</a></td>
-                    <td><a href='./Digby.txt'>Text File</a></td>
-                    <td sorttable_customkey='32'><a href='./Digby.txt'>32 Bytes</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Digby.txt'>Jun 30 2019 6:43 PM</a></td>
+                <tr class='dir'>
+                    <td><a href='./Minecraft/' class='name'>Minecraft</a></td>
+                    <td><a href='./Minecraft/'>&lt;Minecraft&gt;</a></td>
+                    <td sorttable_customkey='0'><a href='./Minecraft'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='20190630184539'><a href='./Minecraft'>May 20 2022 6:45 PM</a></td>
+                </tr>
+                <tr class='dir'>
+                    <td><a href='./PcBuildingSim/' class='name'>PcBuildingSim</a></td>
+                    <td><a href='./PcBuildingSim/'>&lt;PcBuildingSim&gt;</a></td>
+                    <td sorttable_customkey='0'><a href='./PcBuildingSim'>&lt;PcBuildingSim&gt;</a></td>
+                    <td sorttable_customkey='20190630184539'><a href='./PcBuildingSim'>May 20 2022 6:45 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Photo Booth.jpg' class='name'>Photo Booth.jpg</a></td>
@@ -47,12 +53,6 @@
                     <td><a href='./error.php'>PHP Script</a></td>
                     <td sorttable_customkey='2253'><a href='./error.php'>2.2 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./error.php'>Jun 30 2019 6:43 PM</a></td>
-                </tr>
-                <tr class='dir'>
-                    <td><a href='./images' class='name'>images</a></td>
-                    <td><a href='./images'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='0'><a href='./images'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='20190630184539'><a href='./images'>Jun 30 2019 6:45 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.php' class='name'>index.php</a></td>
