--- a/Game/index.html
+++ b/Game/index.html
@@ -26,14 +26,14 @@
             <tbody>
                 <tr class='dir'>
                     <td><a href='./Minecraft/' class='name'>Minecraft</a></td>
-                    <td><a href='./Minecraft/'>&lt;Minecraft&gt;</a></td>
-                    <td sorttable_customkey='0'><a href='./Minecraft'>&lt;Directory&gt;</a></td>
+                    <td><a href='./Minecraft/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./Minecraft'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='20190630184539'><a href='./Minecraft'>May 20 2022 6:45 PM</a></td>
                 </tr>
                 <tr class='dir'>
                     <td><a href='./PcBuildingSim/' class='name'>PcBuildingSim</a></td>
-                    <td><a href='./PcBuildingSim/'>&lt;PcBuildingSim&gt;</a></td>
-                    <td sorttable_customkey='0'><a href='./PcBuildingSim'>&lt;PcBuildingSim&gt;</a></td>
+                    <td><a href='./PcBuildingSim/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='0'><a href='./PcBuildingSim'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='20190630184539'><a href='./PcBuildingSim'>May 20 2022 6:45 PM</a></td>
                 </tr>
                 <tr class='file'>
