--- a/Game/index.html
+++ b/Game/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>Directory Contents</h1>
+        <h1>Dark-LYNN.github.io/Game</h1>
 
         <table class="sortable">
             <thead>
@@ -27,50 +27,32 @@
                 <tr class='dir'>
                     <td><a href='./Minecraft/' class='name'>Minecraft</a></td>
                     <td><a href='./Minecraft/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./Minecraft'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='20190630184539'><a href='./Minecraft'>May 20 2022 6:45 PM</a></td>
+                    <td sorttable_customkey='29460'><a href='./Minecraft/'>16.2 MB</a></td>
+                    <td sorttable_customkey='20190630184539'><a href='./Minecraft'>May 20 2022 6:38 PM</a></td>
                 </tr>
                 <tr class='dir'>
                     <td><a href='./PcBuildingSim/' class='name'>PcBuildingSim</a></td>
                     <td><a href='./PcBuildingSim/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='0'><a href='./PcBuildingSim'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='29460'><a href='./Minecraft/'>14.7 MB</a></td>
                     <td sorttable_customkey='20190630184539'><a href='./PcBuildingSim'>May 20 2022 6:45 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Photo Booth.jpg' class='name'>Photo Booth.jpg</a></td>
-                    <td><a href='./Photo Booth.jpg'>JPEG Image</a></td>
-                    <td sorttable_customkey='29460'><a href='./Photo Booth.jpg'>28.8 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Photo Booth.jpg'>Jun 30 2019 6:43 PM</a></td>
-                </tr>
-                <tr class='file'>
-                    <td><a href='./Wufoo + Tigerlily.mov' class='name'>Wufoo + Tigerlily.mov</a></td>
-                    <td><a href='./Wufoo + Tigerlily.mov'>MOV File</a></td>
-                    <td sorttable_customkey='6572434'><a href='./Wufoo + Tigerlily.mov'>6.3 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Wufoo + Tigerlily.mov'>Jun 30 2019 6:43 PM</a></td>
-                </tr>
-                <tr class='file'>
-                    <td><a href='./error.php' class='name'>error.php</a></td>
-                    <td><a href='./error.php'>PHP Script</a></td>
-                    <td sorttable_customkey='2253'><a href='./error.php'>2.2 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./error.php'>Jun 30 2019 6:43 PM</a></td>
-                </tr>
-                <tr class='file'>
-                    <td><a href='./index.php' class='name'>index.php</a></td>
-                    <td><a href='./index.php'>PHP Script</a></td>
-                    <td sorttable_customkey='4380'><a href='./index.php'>4.3 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./index.php'>Jun 30 2019 6:43 PM</a></td>
-                </tr>
-                <tr class='file'>
-                    <td><a href='./sorttable.js' class='name'>sorttable.js</a></td>
-                    <td><a href='./sorttable.js'>Javascript File</a></td>
-                    <td sorttable_customkey='16975'><a href='./sorttable.js'>16.6 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./sorttable.js'>Jun 30 2019 6:43 PM</a></td>
+                    <td><a href='./index.html' class='name'>index.html</a></td>
+                    <td><a href='./index.html'>HTML file</a></td>
+                    <td sorttable_customkey='29460'><a href='./index.html'>2.71 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./index.html'>May 20 2022 6:52 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./style.css' class='name'>style.css</a></td>
-                    <td><a href='./style.css'>Stylesheet</a></td>
-                    <td sorttable_customkey='2973'><a href='./style.css'>2.9 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./style.css'>Jun 30 2019 6:43 PM</a></td>
+                    <td><a href='./style.css'>CSS File</a></td>
+                    <td sorttable_customkey='6572434'><a href='./style.css'>3.24 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./style.css'>May 20 2022 7:08 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./sorttable.js' class='name'>sorttable.js</a></td>
+                    <td><a href='./sorttable.js'>JS file</a></td>
+                    <td sorttable_customkey='2253'><a href='./sorttable.js'>19.4 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./sorttable.js'>May 20 2022 7:03 PM</a></td>
                 </tr>
             </tbody>
         </table>
