--- a/Game/PcBuildingSim/index.html
+++ b/Game/PcBuildingSim/index.html
@@ -1,11 +1,56 @@
+<!doctype html>
 <html>
 
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./.favicon.ico">
+    <title>Directory Contents</title>
+
+    <link rel="stylesheet" href="./style.css">
+    <script src="./sorttable.js"></script>
+</head>
+
 <body>
-    <h2>PC Building Simulator Guides:</h2>
-    <ul>
-        <li><a href="soon">HTML Calculator - 3DMark Scores, Builds, Upgrades</a></li>
-        <li><a href="Soon">BSOD & Simple Overclocking Guide</a></li>
-    </ul>
+    <div id="container">
+        <h1>Dark-LYNN.github.io/Game/PcBuildingSim</h1>
+
+        <table class="sortable">
+            <thead>
+                <tr>
+                    <th>Filename</th>
+                    <th>Type</th>
+                    <th>Size</th>
+                    <th>Date Modified</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class='dir'>
+                    <td><a href='./current/' class='name'>current</a></td>
+                    <td><a href='./current/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='29460'><a href='./current/'>14.6 MB</a></td>
+                    <td sorttable_customkey='20190630184539'><a href='./PcBuildingSim'>May 20 2022 7:01 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./index.html' class='name'>index.html</a></td>
+                    <td><a href='./index.html'>HTML file</a></td>
+                    <td sorttable_customkey='29460'><a href='./index.html'>2.71 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./index.html'>May 20 2022 7:00 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./style.css' class='name'>style.css</a></td>
+                    <td><a href='./style.css'>CSS File</a></td>
+                    <td sorttable_customkey='6572434'><a href='./style.css'>3.24 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./style.css'>May 20 2022 7:08 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./sorttable.js' class='name'>sorttable.js</a></td>
+                    <td><a href='./sorttable.js'>JS file</a></td>
+                    <td sorttable_customkey='2253'><a href='./sorttable.js'>19.4 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./sorttable.js'>May 20 2022 7:03 PM</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
