--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <td sorttable_customkey='20190630184539'><a href='./api'>May 20 2022 7:08 PM</a></td>
                 </tr>
                 <tr class='dir'>
-                    <td><a href='./assets/' class='name'>PcBuildingSim</a></td>
+                    <td><a href='./assets/' class='name'>assets</a></td>
                     <td><a href='./assets/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='29460'><a href='./assets/'>39.7 KB</a></td>
                     <td sorttable_customkey='20190630184539'><a href='./assets'>May 20 2022 7:10 PM</a></td>
