--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>Dark-LYNN.github.io/Game</h1>
+        <h1>Dark-LYNN.github.io</h1>
 
         <table class="sortable">
             <thead>
