--- a/Game/Minecraft/index.html
+++ b/Game/Minecraft/index.html
@@ -25,16 +25,22 @@
             </thead>
             <tbody>
                 <tr class='dir'>
-                    <td><a href='./Minecraft/' class='name'>Minecraft</a></td>
-                    <td><a href='./Minecraft/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./Minecraft/'>16.2 MB</a></td>
-                    <td sorttable_customkey='20190630184539'><a href='./Minecraft'>May 20 2022 6:38 PM</a></td>
+                    <td><a href='./pixelart/' class='name'>pixelart</a></td>
+                    <td><a href='./pixelart/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='29460'><a href='./pixelart/'>32.7 KB</a></td>
+                    <td sorttable_customkey='20190630184539'><a href='./pixelart'>May 20 2022 6:38 PM</a></td>
                 </tr>
-                <tr class='dir'>
-                    <td><a href='./PcBuildingSim/' class='name'>PcBuildingSim</a></td>
-                    <td><a href='./PcBuildingSim/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./Minecraft/'>14.7 MB</a></td>
-                    <td sorttable_customkey='20190630184539'><a href='./PcBuildingSim'>May 20 2022 6:45 PM</a></td>
+                <tr class='img'>
+                    <td><a href='./vilagers.png' class='name'>vilagers.png</a></td>
+                    <td><a href='./vilagers.png'>PNG image</a></td>
+                    <td sorttable_customkey='2253'><a href='./vilagers.png'>817 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./vilagers.png'>May 20 2022 7:03 PM</a></td>
+                </tr>
+                <tr class='img'>
+                    <td><a href='./brewing.png' class='name'>brewing.png</a></td>
+                    <td><a href='./brewing.png'>PNG image</a></td>
+                    <td sorttable_customkey='2253'><a href='./brewing.png'>714 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./brewing.png'>May 20 2022 7:03 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html' class='name'>index.html</a></td>
