--- a/sites/index.html
+++ b/sites/index.html
@@ -25,39 +25,21 @@
             </thead>
             <tbody>
                 <tr class='dir'>
-                    <td><a href='./api/' class='name'>api</a></td>
-                    <td><a href='./api/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./api/'>1.87 KB </a></td>
-                    <td sorttable_customkey='20190630184539'><a href='./api'>May 20 2022 7:08 PM</a></td>
+                    <td><a href='./akira/' class='name'>akira</a></td>
+                    <td><a href='./akira/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='6572434'><a href='./akira/'>314 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./akira/'>May 20 2022 7:08 PM</a></td>
                 </tr>
                 <tr class='dir'>
-                    <td><a href='./assets/' class='name'>assets</a></td>
-                    <td><a href='./assets/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./assets/'>39.7 KB</a></td>
-                    <td sorttable_customkey='20190630184539'><a href='./assets'>May 20 2022 7:10 PM</a></td>
+                    <td><a href='./backups/' class='name'>backups</a></td>
+                    <td><a href='./backups/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./backups/'>169 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./backups/'>May 20 2022 7:03 PM</a></td>
                 </tr>
                 <tr class='dir'>
-                    <td><a href='./BetterDiscord/' class='name'>BetterDiscord</a></td>
-                    <td><a href='./BetterDiscord/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./BetterDiscord'>25.5 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./BetterDiscord'>May 20 2022 7:11 PM</a></td>
-                </tr>
-                <tr class='dir'>
-                    <td><a href='./donator/' class='name'>donator</a></td>
-                    <td><a href='./donator/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='6572434'><a href='./donator/'>314 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./donator/'>May 20 2022 7:08 PM</a></td>
-                </tr>
-                <tr class='dir'>
-                    <td><a href='./Game/' class='name'>Game</a></td>
-                    <td><a href='./Game/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./Game/'>16.2 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Game/'>May 20 2022 7:03 PM</a></td>
-                </tr>
-                <tr class='dir'>
-                    <td><a href='./sites/' class='name'>Sites</a></td>
-                    <td><a href='./sites/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./sites/'>175 KB</a></td>
+                    <td><a href='./css/' class='name'>css</a></td>
+                    <td><a href='./css/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./css/'>6.54 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./sites/'>May 20 2022 7:16 PM</a></td>
                 </tr>
                 <tr class='file'>
