--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./.favicon.ico">
+    <link rel="shortcut icon" href="././favicon.ico">
     <title>Directory Contents</title>
 
     <link rel="stylesheet" href="./style.css">
