--- a/sites/pedra/index.html
+++ b/sites/pedra/index.html
@@ -17,15 +17,30 @@
 <body>
     <section id="uwu" class="owo">
         <h1>Privacy Policy</h1>
-        <h5>- last changed on September 7 2022</h5>
+        <h6>- last changed on September 7 2022</h6>
         <br>
-        <h3>The use of this application ("Bot") in a server requires the collection of some specific user data ( "Data"). The Data collected includes, but is not limited to Discord user ID values. Use of the Bot is considered an agreement to the terms of
-            this Policy.</h3>
+        <h5>The use of this application ("Bot") in a server requires the collection of some specific user data ( "Data"). The Data collected includes, but is not limited to Discord user ID values. Use of the Bot is considered an agreement to the terms of
+            this Policy.</h5>
         <br>
-        <h2>Access to Data</h2>
-        <h3>Access to Data is only permitted to the Bot's developers, and only in the scope required for the development, testing, and implementation of features for the Bot. Data is not sold, provided to, or shared with any third party, except where required
+        <h4>Access to Data</h4>
+        <h5>Access to Data is only permitted to the Bot's developers, and only in the scope required for the development, testing, and implementation of features for the Bot. Data is not sold, provided to, or shared with any third party, except where required
             by law or a Terms of Service agreement. You can view the data by using "akira contact" or contacting "@Dark-LYNN#6568" (this can take upto 30 business days).
-        </h3>
+        </h5>
+        <br>
+        <h4>Storage of Data</h4>
+        <h5>Data is stored in a Private database. The database is secured to prevent external access, however no guarantee is provided and the Bot owners assume no liability for the unintentional or malicious breach of Data. In the event of an unauthorised
+            Data access, users will be notified through the Discord client application.</h5>
+        <br>
+        <h4>User Rights</h4>
+        <h5>At any time, you have the right to request to view the Data pertaining to your Discord account. You may submit a request through the Discord Server and "bot". You have the right to request the removal of relevant Data.</h5>
+        <br>
+        <h4>Underage Users</h4>
+        <h5>The use of the Bot is not permitted for minors under the age of 13, or under the age of legal consent for their country. This is in compliance with the Discord Terms of Service. No information will be knowingly stored from an underage user. If
+            it is found out that a user is underage we will take all necessary action to delete the stored data.</h5>
+        <br>
+        <h4>Questions</h4>
+        <h5>If you have any questions or are concerned about what data might be being stored from your account contact @Dark-LYNN#6568 or use "akira contact". For more information check the Discord
+            <a href="https://discord.com/terms">Terms Of Service</a>.</h5>
     </section>
 </body>
 
