--- a/sites/pedra/index.html
+++ b/sites/pedra/index.html
@@ -40,6 +40,8 @@
         <h4>Questions</h4>
         <h5>If you have any questions or are concerned about what data might be being stored from your account contact @Dark-LYNN#6568 or use "akira contact". For more information check the Discord
             <a href="https://discord.com/terms">Terms Of Service</a>.</h5>
+        <br>
+        <h7>Terms made and hosted by @Dark-LYNN#6568</h7>
     </section>
 </body>
 
