--- a/sites/pedra/index.html
+++ b/sites/pedra/index.html
@@ -41,7 +41,7 @@
         <h5>If you have any questions or are concerned about what data might be being stored from your account contact @itz | Skélety#6258 or use ")contact". For more information check the Discord
             <a href="https://discord.com/terms">Terms Of Service</a>.</h5>
         <br>
-        <h7>Terms made and hosted by @Dark-LYNN#6568</h7>
+        <!--Terms made and hosted by @Dark-LYNN#6568-->
     </section>
 </body>
 
