--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             </thead>
             <tbody>
                 <tr class='dir'>
+                    <td><a href='./akira/' class='name'>akira</a></td>
+                    <td><a href='./akira/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='29460'><a href='./akira/'>1.87 KB </a></td>
+                    <td sorttable_customkey='20190630184539'><a href='./akira'>Jan 30 2023 19:06 PM</a></td>
+                </tr>
+                <tr class='dir'>
                     <td><a href='./api/' class='name'>api</a></td>
                     <td><a href='./api/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='29460'><a href='./api/'>1.87 KB </a></td>
