--- a/akira/policy.html
+++ b/akira/policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Pedra - policy</title>
+    <title>Akira - policy</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.90" />
     <meta name="theme-color" content="#2571e8" />
