--- a/akira/index.html
+++ b/akira/index.html
@@ -26,7 +26,7 @@
             <tbody>
                 <tr class='dir'>
                     <td><a href='./policy.html' class='name'>policy.html</a></td>
-                    <td><a href='./policy.html'>&lt;HTML file&gt;</a></td>
+                    <td><a href='./policy.html'>HTML file</a></td>
                     <td sorttable_customkey='2253'><a href='./policy.html'>2.76 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./policy.html'>Jan 30 2023 19:27 PM</a></td>
                 </tr>
