--- a/akira/policy.html
+++ b/akira/policy.html
@@ -34,7 +34,7 @@
             it is found out that a user is underage we will take all necessary action to delete the stored data.</h5>
 
         <h4>Questions</h4>
-        <h5>If you have any questions or are concerned about what data might be being stored from your account contact @itz | Skélety#6258 or use ")contact". For more information check the Discord
+        <h5>If you have any questions or are concerned about what data might be being stored from your account contact @Dark-LYNN#6568 or use "akira contact". For more information check the Discord
             <a href="https://discord.com/terms">Terms Of Service</a>.</h5>
         <br>
         <!--Terms made and hosted by @Dark-LYNN#6568-->
