--- a/assets/index.html
+++ b/assets/index.html
@@ -34,7 +34,13 @@
                     <td><a href='./index.html' class='name'>index.html</a></td>
                     <td><a href='./index.html'>HTML file</a></td>
                     <td sorttable_customkey='29460'><a href='./index.html'>1.46 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./index.html'>May 20 2022 6:52 PM</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./index.html'>Jan 31 2023 9:14 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./OwO.md' class='name'>OwO.md</a></td>
+                    <td><a href='./OwO.md'>Markdown file</a></td>
+                    <td sorttable_customkey='29460'><a href='./OwO.md'>1.46 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./OwO.md'>May 20 2022 6:52 PM</a></td>
                 </tr>
             </tbody>
         </table>
