--- a/assets/index.html
+++ b/assets/index.html
@@ -25,22 +25,22 @@
             </thead>
             <tbody>
                 <tr class='dir'>
-                    <td><a href='./policy.html' class='name'>policy.html</a></td>
-                    <td><a href='./policy.html'>HTML file</a></td>
-                    <td sorttable_customkey='2253'><a href='./policy.html'>2.76 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./policy.html'>Jan 30 2023 19:27 PM</a></td>
+                    <td><a href='./css/' class='name'>css</a></td>
+                    <td><a href='./css/'>%3CDirectory%3E</a></td>
+                    <td sorttable_customkey='2253'><a href='./css/'>39.3 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./css/'>Jan 20 2022 10:17 AM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html' class='name'>index.html</a></td>
                     <td><a href='./index.html'>HTML file</a></td>
                     <td sorttable_customkey='29460'><a href='./index.html'>1.46 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./index.html'>Jan 31 2023 9:14 PM</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./index.html'>Jan 31 2023 21:14 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./OwO.md' class='name'>OwO.md</a></td>
                     <td><a href='./OwO.md'>Markdown file</a></td>
                     <td sorttable_customkey='29460'><a href='./OwO.md'>2.63 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./OwO.md'>Aug 20 2022 2:24 PM</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./OwO.md'>Aug 20 2022 14:24 PM</a></td>
                 </tr>
             </tbody>
         </table>
