--- a/assets/index.html
+++ b/assets/index.html
@@ -26,9 +26,15 @@
             <tbody>
                 <tr class='dir'>
                     <td><a href='./css/' class='name'>css</a></td>
-                    <td><a href='./css/'>%3CDirectory%3E</a></td>
+                    <td><a href='./css/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='2253'><a href='./css/'>39.3 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./css/'>Jan 20 2022 10:17 AM</a></td>
+                </tr>
+                <tr class='dir'>
+                    <td><a href='./js/' class='name'>js</a></td>
+                    <td><a href='./js/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./js/'>176 B</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./js/'>Jan 20 2022 10:39 AM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html' class='name'>index.html</a></td>
