--- a/assets/index.html
+++ b/assets/index.html
@@ -24,7 +24,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class='dir'>
+                <tr class='file'>
                     <td><a href='./css/' class='name'>css</a></td>
                     <td><a href='./css/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='2253'><a href='./css/'>39.3 KB</a></td>
@@ -41,6 +41,12 @@
                     <td><a href='./js/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='2253'><a href='./js/'>176 B</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./js/'>Jan 20 2022 10:39 AM</a></td>
+                </tr>
+                <tr class='dir'>
+                    <td><a href='./other/' class='name'>other</a></td>
+                    <td><a href='./other/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./other/'>176 B</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./other/'>May 28 2022 13:58 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./OwO.md' class='name'>OwO.md</a></td>
