--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -6,13 +6,13 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="../style.css">
-    <script src="../sorttable.js"></script>
+    <link rel="stylesheet" href="../../style.css">
+    <script src="../../sorttable.js"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>Dark-LYNN.github.io/assets</h1>
+        <h1>Dark-LYNN.github.io/assets/css</h1>
 
         <table class="sortable">
             <thead>
