--- a/assets/js/index.html
+++ b/assets/js/index.html
@@ -32,7 +32,7 @@
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.js' class='name'>index.js</a></td>
-                    <td><a href='./index.js'>JS file;</a></td>
+                    <td><a href='./index.js'>JS file</a></td>
                     <td sorttable_customkey='2253'><a href='./index.js'>176 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./index.js'>Jan 20 2022 10:17 AM</a></td>
                 </tr>
