--- a/assets/other/index.html
+++ b/assets/other/index.html
@@ -25,16 +25,16 @@
             </thead>
             <tbody>
                 <tr class='file'>
-                    <td><a href='./main.css' class='name'>main.css</a></td>
-                    <td><a href='./main.css'>CSS file;</a></td>
-                    <td sorttable_customkey='2253'><a href='./main.css'>39.3 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./main.css'>Jan 20 2022 10:17 AM</a></td>
-                </tr>
-                <tr class='file'>
                     <td><a href='./index.html' class='name'>index.html</a></td>
                     <td><a href='./index.html'>HTML file</a></td>
                     <td sorttable_customkey='29460'><a href='./index.html'>1.46 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./index.html'>Jan 31 2023 21:41 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./x2Ed11hydhLIRdRp7sIk.txt' class='name'>x2Ed11hydhLIRdRp7sIk.txt</a></td>
+                    <td><a href='./x2Ed11hydhLIRdRp7sIk.txt'>CSS file;</a></td>
+                    <td sorttable_customkey='2253'><a href='./x2Ed11hydhLIRdRp7sIk.txt'>184 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./x2Ed11hydhLIRdRp7sIk.txt'>May 28 2022 10:17 AM</a></td>
                 </tr>
             </tbody>
         </table>
