--- a/assets/other/index.html
+++ b/assets/other/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>Dark-LYNN.github.io/assets/css</h1>
+        <h1>Dark-LYNN.github.io/assets/other</h1>
 
         <table class="sortable">
             <thead>
