--- a/assets/other/index.html
+++ b/assets/other/index.html
@@ -32,7 +32,7 @@
                 </tr>
                 <tr class='file'>
                     <td><a href='./x2Ed11hydhLIRdRp7sIk.txt' class='name'>x2Ed11hydhLIRdRp7sIk.txt</a></td>
-                    <td><a href='./x2Ed11hydhLIRdRp7sIk.txt'>CSS file;</a></td>
+                    <td><a href='./x2Ed11hydhLIRdRp7sIk.txt'>CSS file</a></td>
                     <td sorttable_customkey='2253'><a href='./x2Ed11hydhLIRdRp7sIk.txt'>184 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./x2Ed11hydhLIRdRp7sIk.txt'>May 28 2022 10:17 AM</a></td>
                 </tr>
