--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -26,7 +26,7 @@
             <tbody>
                 <tr class='file'>
                     <td><a href='./main.css' class='name'>main.css</a></td>
-                    <td><a href='./main.css'>CSS file;</a></td>
+                    <td><a href='./main.css'>CSS file</a></td>
                     <td sorttable_customkey='2253'><a href='./main.css'>39.3 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./main.css'>Jan 20 2022 10:17 AM</a></td>
                 </tr>
