--- a/BetterDiscord/index.html
+++ b/BetterDiscord/index.html
@@ -1,9 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <title>Dark-Lynn's Github Site</title>
-    </head>
-    <body>
-        <p>OwO</p>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./.favicon.ico">
+    <title>Directory Contents</title>
+
+    <link rel="stylesheet" href="../style.css">
+    <script src="../sorttable.js"></script>
+</head>
+
+<body>
+    <div id="container">
+        <h1>Dark-LYNN.github.io/BetterDiscord</h1>
+
+        <table class="sortable">
+            <thead>
+                <tr>
+                    <th>Filename</th>
+                    <th>Type</th>
+                    <th>Size</th>
+                    <th>Date Modified</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class='file'>
+                    <td><a href='./extension/' class='name'>extension</a></td>
+                    <td><a href='./extension/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./extension/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./extension/'>Jan 31 2022</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./theme/' class='name'>theme</a></td>
+                    <td><a href='./theme/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./theme/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./theme/'>Sep 1 2022</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./index.html' class='name'>index.html</a></td>
+                    <td><a href='./index.html'>HTML file</a></td>
+                    <td sorttable_customkey='29460'><a href='./index.html'>1.46 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./index.html'>Jan 31 2023 21:49 PM</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</body>
 </html>
