--- a/index.html
+++ b/index.html
@@ -27,37 +27,37 @@
                 <tr class='dir'>
                     <td><a href='./akira/' class='name'>akira</a></td>
                     <td><a href='./akira/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./akira/'>4.22 KB </a></td>
+                    <td sorttable_customkey='29460'><a href='./akira/'>N/A</a></td>
                     <td sorttable_customkey='20190630184539'><a href='./akira'>Jan 30 2023 19:06 PM</a></td>
                 </tr>
                 <tr class='dir'>
                     <td><a href='./assets/' class='name'>assets</a></td>
                     <td><a href='./assets/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./assets/'>39.7 KB</a></td>
+                    <td sorttable_customkey='29460'><a href='./assets/'>N/A</a></td>
                     <td sorttable_customkey='20190630184539'><a href='./assets'>May 20 2022 7:10 PM</a></td>
                 </tr>
                 <tr class='dir'>
                     <td><a href='./BetterDiscord/' class='name'>BetterDiscord</a></td>
                     <td><a href='./BetterDiscord/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='29460'><a href='./BetterDiscord'>25.5 MB</a></td>
+                    <td sorttable_customkey='29460'><a href='./BetterDiscord'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./BetterDiscord'>May 20 2022 7:11 PM</a></td>
                 </tr>
                 <tr class='dir'>
                     <td><a href='./donator/' class='name'>donator</a></td>
                     <td><a href='./donator/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='6572434'><a href='./donator/'>314 KB</a></td>
+                    <td sorttable_customkey='6572434'><a href='./donator/'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./donator/'>May 20 2022 7:08 PM</a></td>
                 </tr>
                 <tr class='dir'>
                     <td><a href='./Game/' class='name'>Game</a></td>
                     <td><a href='./Game/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./Game/'>16.2 MB</a></td>
+                    <td sorttable_customkey='2253'><a href='./Game/'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./Game/'>May 20 2022 7:03 PM</a></td>
                 </tr>
                 <tr class='dir'>
                     <td><a href='./sites/' class='name'>Sites</a></td>
                     <td><a href='./sites/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./sites/'>175 KB</a></td>
+                    <td sorttable_customkey='2253'><a href='./sites/'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./sites/'>May 20 2022 7:16 PM</a></td>
                 </tr>
                 <tr class='file'>
