--- a/assets/index.html
+++ b/assets/index.html
@@ -27,19 +27,19 @@
                 <tr class='file'>
                     <td><a href='./css/' class='name'>css</a></td>
                     <td><a href='./css/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./css/'>39.3 KB</a></td>
+                    <td sorttable_customkey='2253'><a href='./css/'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./css/'>Jan 20 2022 10:17 AM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html' class='name'>index.html</a></td>
                     <td><a href='./index.html'>HTML file</a></td>
-                    <td sorttable_customkey='29460'><a href='./index.html'>1.46 KB</a></td>
+                    <td sorttable_customkey='29460'><a href='./index.html'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./index.html'>Jan 31 2023 21:14 PM</a></td>
                 </tr>
                 <tr class='dir'>
                     <td><a href='./js/' class='name'>js</a></td>
                     <td><a href='./js/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./js/'>176 B</a></td>
+                    <td sorttable_customkey='2253'><a href='./js/'>N/A</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./js/'>Jan 20 2022 10:39 AM</a></td>
                 </tr>
                 <tr class='dir'>
