--- a/BetterDiscord/index.html
+++ b/BetterDiscord/index.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="../style.css">
-    <script src="../sorttable.js"></script>
+    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
+    <script src="https://dark-lynn.github.io/sorttable.js"></script>
 </head>
 
 <body>
