--- a/BetterDiscord/extension/index.html
+++ b/BetterDiscord/extension/index.html
@@ -32,10 +32,10 @@
                     <td sorttable_customkey='20190630184359'><a href='./Images/'>Sep 1 2022</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./BetterSettings.css/' class='name'>BetterSettings.css</a></td>
-                    <td><a href='./BetterSettings.css/'>CSS Files;</a></td>
-                    <td sorttable_customkey='2253'><a href='./extension/'>6.33 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./extension/'>Jan 20 2022</a></td>
+                    <td><a href='./BetterSettings.css' class='name'>BetterSettings.css</a></td>
+                    <td><a href='./BetterSettings.css'>CSS Files;</a></td>
+                    <td sorttable_customkey='2253'><a href='./BetterSettings.css'>6.33 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./BetterSettings.css'>Jan 20 2022</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html' class='name'>index.html</a></td>
