--- a/BetterDiscord/extension/index.html
+++ b/BetterDiscord/extension/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>Dark-LYNN.github.io/BetterDiscord</h1>
+        <h1>Dark-LYNN.github.io/BetterDiscord/extension</h1>
 
         <table class="sortable">
             <thead>
