--- a/BetterDiscord/extension/Images/gifs/323.html
+++ b/BetterDiscord/extension/Images/gifs/323.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+   <!--
     <title>Telegram: Contact @onlyfansleakedvi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -38,13 +39,14 @@
 
 <meta name="apple-itunes-app" content="app-id=686449807, app-argument: tg://resolve?domain=onlyfansleakedvi&post=323">
     <link rel="shortcut icon" href="//telegram.org/favicon.ico?3" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
-    <!--link href="/css/myriad.css" rel="stylesheet"-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css"> -->
+    <!--link href="/css/myriad.css" rel="stylesheet"--> <!--
     <link href="//telegram.org/css/bootstrap.min.css?3" rel="stylesheet">
-    <link href="//telegram.org/css/telegram.css?215" rel="stylesheet" media="screen">
+    <link href="//telegram.org/css/telegram.css?215" rel="stylesheet" media="screen"> -->
   </head>
   <body>
-
+Old code... idk what it does thh
+<!--    
     <div class="tgme_page_wrap">
       <div class="tgme_head_wrap">
         <div class="tgme_head">
@@ -62,8 +64,8 @@
 </div>
 <div class="tgme_page_widget_actions" id="widget_actions">
   <div class="tgme_page_widget_actions_cont">
-    <div class="tgme_page_widget_action_right">
-      <!-- WEBOGRAM_BTN -->
+    <div class="tgme_page_widget_action_right"> -->
+      <!-- WEBOGRAM_BTN --> <!--
     </div>
     <div class="tgme_page_widget_action_left">
       <div class="tgme_page_embed_btn">
@@ -165,7 +167,7 @@ function postMessageHandler(event) {
 window.addEventListener('resize', checkActionsPosition);
 window.addEventListener('scroll', checkActionsPosition);
 window.addEventListener('message', postMessageHandler);
-</script>
+</script> -->
   </body>
 </html>
 <!-- page generated in 17.25ms -->
