--- a/akira/index.html
+++ b/akira/index.html
@@ -28,13 +28,19 @@
                     <td><a href='./policy.html' class='name'>policy.html</a></td>
                     <td><a href='./policy.html'>HTML file</a></td>
                     <td sorttable_customkey='2253'><a href='./policy.html'>2.76 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./policy.html'>Jan 30 2023 19:27 PM</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./policy.html'>Feb 05 2023 18:05 PM</a></td>
+                </tr>
+                <tr class='dir'>
+                    <td><a href='./terms.html' class='name'>terms.html</a></td>
+                    <td><a href='./terms.html'>HTML file</a></td>
+                    <td sorttable_customkey='2253'><a href='./terms.html'>3 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./terms.html'>Feb 05 2023 18:05 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html' class='name'>index.html</a></td>
                     <td><a href='./index.html'>HTML file</a></td>
                     <td sorttable_customkey='29460'><a href='./index.html'>1.46 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./index.html'>May 20 2022 6:52 PM</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./index.html'>Feb 05 2023 18:05 PM</a></td>
                 </tr>
             </tbody>
         </table>
