--- a/akira/assets/index.html
+++ b/akira/assets/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href=".\assets\images\Akira.png">
+    <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
     <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>Dark-LYNN.github.io/akira</h1>
+        <h1>Dark-LYNN.github.io/akira/assets</h1>
 
         <table class="sortable">
             <thead>
@@ -25,16 +25,10 @@
             </thead>
             <tbody>
                 <tr class='dir'>
-                    <td><a href='./policy.html' class='name'>policy.html</a></td>
-                    <td><a href='./policy.html'>HTML file</a></td>
-                    <td sorttable_customkey='2253'><a href='./policy.html'>2.76 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./policy.html'>Feb 05 2023 18:05 PM</a></td>
-                </tr>
-                <tr class='dir'>
-                    <td><a href='./terms.html' class='name'>terms.html</a></td>
-                    <td><a href='./terms.html'>HTML file</a></td>
-                    <td sorttable_customkey='2253'><a href='./terms.html'>3 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./terms.html'>Feb 05 2023 18:05 PM</a></td>
+                    <td><a href='./images/' class='name'>images</a></td>
+                    <td><a href='./images/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2253'><a href='./images/'>N/A</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./images/'>Feb 05 2023 18:11 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./index.html' class='name'>index.html</a></td>
