--- a/akira/policy.html
+++ b/akira/policy.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href=".\assets\images\Akira.png">
     <title>Privacy Policy - Akira Bot</title>
 
     <style>
