--- a/akira/terms.html
+++ b/akira/terms.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href=".\assets\images\Akira.png">
     <title>Terms of Service | Akira</title>
     <style>
         body {
