--- a/akira/policy.html
+++ b/akira/policy.html
@@ -3,8 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href=".\assets\images\Akira.png">
+    <link rel="shortcut icon" href="./assets/images/Akira.png">
     <title>Privacy Policy - Akira Bot</title>
+
+    <meta name="description" content="Discover Akira's commitment to protecting user privacy.&#10;Learn how we handle your data on Discord.&#10;Read our Privacy Policy now." />
+    <meta name="author" content="Dark-LYNN#6568">
+    <meta name="keywords" content="Privacy policy, Discord, Akira, Personal information, Collection, Use, Disclosure, Third parties, Services, Monitoring, Usage, User experience, Contact">
+    <meta property="og:site_name" content="https://dark-lynn.github.io/akira" />
+    <meta property="og:title" content="Privacy Policy - Akira Bot" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Discover Akira's commitment to protecting user privacy.&#10;Learn how we handle your data on Discord.&#10;Read our Privacy Policy now." />
+    <meta property="og:image" content="./assets/images/akira.png " />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="500" />
+    <meta property="og:image:secure_url" content="https://dark-lynn.github.io/akira/assets/images/Akira.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:alt" content="Akira Icon" />
+    <meta name="theme-color" content="#f47fff">
+    <meta name="msapplication-TileColor" content="#f47fff">
+    <meta content="#f47fff" data-react-helmet="true">
+
 
     <style>
         body {
