--- a/akira/terms.html
+++ b/akira/terms.html
@@ -5,6 +5,22 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href=".\assets\images\Akira.png">
     <title>Terms of Service | Akira</title>
+    <meta name="description" content="Understand the rules for using Akira on Discord.&#10;Read our TOS for guidelines on bot usage & acceptable behavior.&#10;Get informed now." />
+    <meta name="author" content="Dark-LYNN#6568">
+    <meta name="keywords" content="Terms of Service, Discord, Akira, Usage guidelines, Acceptable behavior, Bot usage, User conduct, Responsibility, Prohibited activities, Liability, Disputes, Termination, Changes to TOS, Contact">
+    <meta property="og:site_name" content="https://dark-lynn.github.io/akira" />
+    <meta property="og:title" content="Terms Of Service - Akira Bot" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Understand the rules for using Akira on Discord.&#10;Read our TOS for guidelines on bot usage & acceptable behavior.&#10;Get informed now." />
+    <meta property="og:image" content="./assets/images/akira.png " />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="500" />
+    <meta property="og:image:secure_url" content="https://dark-lynn.github.io/akira/assets/images/Akira.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:alt" content="Akira Icon" />
+    <meta name="theme-color" content="#f47fff">
+    <meta name="msapplication-TileColor" content="#f47fff">
+    <meta content="#f47fff" data-react-helmet="true">
     <style>
         body {
             font-family: Arial, sans-serif;
