--- a/akira/index.html
+++ b/akira/index.html
@@ -1,50 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href=".\assets\images\Akira.png">
-    <title>Directory Contents</title>
-
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Akira - Discord Bot</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
-    <div id="container">
-        <h1>Dark-LYNN.github.io/akira</h1>
+    <header>
+        <div class="logo">
+            <a href="#">Akira Bot</a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="banner">
+        <div class="sec01">
+            <h1 class="text1">Akira</h1>
+            <h2>Unleash the power of efficiency with Akira, your all-in-one Discord solution.</h2>
+        </div>
+        <div class="banner-buttons">
+            <a href="./commands/">
+                <button><span>Commands</span>
+                <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
+                    <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
+                </svg>
+                </button>
+            </a>
+            <a href="./invite/">
+                <button><span>Invite Akira</span>
+                <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
+                    <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
+                </svg>
+                </button>
+            </a>
+            <a href="./premium">
+                <button><span>Premium</span>
+                <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
+                    <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
+                </svg>
+                </button>
+            </a>
+        </div>
+        <div class="overlay">
 
-        <table class="sortable">
-            <thead>
-                <tr>
-                    <th>Filename</th>
-                    <th>Type</th>
-                    <th>Size</th>
-                    <th>Date Modified</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class='dir'>
-                    <td><a href='./policy.html' class='name'>policy.html</a></td>
-                    <td><a href='./policy.html'>HTML file</a></td>
-                    <td sorttable_customkey='2253'><a href='./policy.html'>2.76 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./policy.html'>Feb 05 2023 18:05 PM</a></td>
-                </tr>
-                <tr class='dir'>
-                    <td><a href='./terms.html' class='name'>terms.html</a></td>
-                    <td><a href='./terms.html'>HTML file</a></td>
-                    <td sorttable_customkey='2253'><a href='./terms.html'>3 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./terms.html'>Feb 05 2023 18:05 PM</a></td>
-                </tr>
-                <tr class='file'>
-                    <td><a href='./index.html' class='name'>index.html</a></td>
-                    <td><a href='./index.html'>HTML file</a></td>
-                    <td sorttable_customkey='29460'><a href='./index.html'>1.46 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./index.html'>Feb 05 2023 18:05 PM</a></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+        </div>
+    </section>
+    <main>
+
+    </main>
+    <footer class="footer">
+        <nav class="navigation-footer">
+            <div class="section-entry">
+                <h3>Akira Bot</h3>
+                <a href="./" data-preload-link="true" data-preload-link-activated="true">Home</a>
+                <a href="/support" data-preload-link="true" data-preload-link-activated="true">Support Server</a>
+                <a href="/commands" data-preload-link="true" data-preload-link-activated="true">Commands</a>
+                <a href="/donate">Premium</a>
+            </div>
+            <div class="section-entry">
+                <h3>About us</h3>
+                <a href="/blog">Dev notes</a>
+                <a href="/contact">Contact Us</a>
+                <a href="/staff">Our Team</a>
+            </div>
+            <div class="section-entry">
+                <h3>Resources</h3>
+                <a href="/terms">Terms of Service</a>
+                <a href="/policy">Privacy Policy</a>
+            </div>
+        </nav>
+        <p style="text-align: center;">Akira 2023 — All rights reserved</p>
+    </footer>
+
 </body>
 
 </html>
