--- a/akira/index.html
+++ b/akira/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href=".\assets\images\Akira.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akira - Discord Bot</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
