--- a/akira/index.html
+++ b/akira/index.html
@@ -28,21 +28,21 @@
             <h2>Unleash the power of efficiency with Akira, your all-in-one Discord solution.</h2>
         </div>
         <div class="banner-buttons">
-            <a href="./commands/">
+            <a href="/commands/">
                 <button><span>Commands</span>
                 <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
                     <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
                 </svg>
                 </button>
             </a>
-            <a href="./invite/">
+            <a href="/invite/">
                 <button><span>Invite Akira</span>
                 <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
                     <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
                 </svg>
                 </button>
             </a>
-            <a href="./premium">
+            <a href="/premium">
                 <button><span>Premium</span>
                 <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
                     <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
